tests for InternshipDtoValidator added